Cleanup after FindBugs run - nothing serious, just inefficient code etc